# transcribe-evaluator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  database.py  evaluator.py  main.py  models.py  pyproject.toml  text_normalizer.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: HistoryDashboard.jsx  MetricsTable.jsx  UploadZone.jsx
