[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-evaluator-backend"
version = "0.1.0"
description = "FastAPI backend for Transcript-Evaluator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "jiwer>=3.0.4",
    "nltk>=3.9.1",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
]

[tool.setuptools]
py-modules = ["main", "database", "models", "text_normalizer", "evaluator"]